Project DoList {
    database_type: 'PostgreSQL'
}
Table user {
    id int [pk, increment]
    full_name varchar [not null]
    email varchar [not null, unique]
    password varchar [not null]
    created_at datetime
    updated_at datetime
    is_active boolean [default: true]
    note: "table 'user' contains user information"
}
Enum token_type {
    AUTHENTICATION
    VERIFICATION
    FORGOT_PASSWORD
}
Table user_token {
    id int [pk, increment]
    token varchar [not null, unique]
    expiry_date datetime [not null]
    is_valid bool [default: true]
    user_id int [not null]
    token_type token_type [not null]
    created_at datetime [default: `now()`]
    updated_at datetime
    note: "table 'user_token' contains token information for various purposes"
}
Enum task_status {
  TO_DO
  IN_PROGRESS
  DONE
}
Enum task_priority {
    CRITICAL
    HIGH
    MEDIUM
    LOW
}
Table task {
    id int [pk, increment]
    title varchar [not null]
    description varchar
    status task_status [default: `TO_DO`]
    priority task_priority [default: `HIGH`]
    due_date date
    completion_date date
    user_id int [not null]
    created_at datetime [default: `now()`]
    updated_at datetime
    note: "table 'task' contains task information"
}
Ref: user_token.user_id > user.id
Ref: task.user_id > user.id  